--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="/sub-pages/about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/sub-pages/contact-us.html">Contact Us</a>
+                <a class="nav-link" href="sub-pages/contact-us.html">Contact Us</a>
               </li>
               <li class="nav-item">
                 <a class="btn-style1" href="login.html">Login</a>
